adjusted texts in question editing forms

--- a/templates/main/elements/question_edit_form.html
+++ b/templates/main/elements/question_edit_form.html
@@ -17,7 +17,7 @@
 	</div>
 	
 	<h3>Published</h3>
-	<div class="help-block">If checked, the question will be visible on the <a href="{% url bashoneliners.main.views.question_list %}">questions page</a>.</div>
+	<div class="help-block">If not checked, the question will be visible only by you.</div>
 	<div class="input">
 	    <div class="error">{{ form.is_published.errors }}</div>
 	    <div class="is_published"><label class="checkbox">{{ form.is_published }} Published</label></div>
