--- a/templates/main/elements/please_login.html
+++ b/templates/main/elements/please_login.html
@@ -1,6 +1,7 @@
 {% if not user.is_authenticated %}
 <div class="alert alert-warning">
-    <h4 class="alert-heading">Warning!</h4>
-    You have to <a href="{% url bashoneliners.main.views.login %}">login</a> (with your preferred OpenID) to use this page.
+    <strong class="alert-heading">Warning!</strong>
+    You have to <a href="{% url bashoneliners.main.views.login %}">login (with an OpenID)</a> to use this page. 
+    You can see the page as a demo, but you won't be able to submit the form.
 </div>
 {% endif %}
