show the Post question and edit profile link even when not logged in, but ask to login before posting

--- a/templates/main/pages/profile_edit.html
+++ b/templates/main/pages/profile_edit.html
@@ -1,14 +1,16 @@
 {% extends "base.html" %}
 
-{% block pagetitle %}{{ user.hackerprofile.display_name|default:user.username }}{% endblock %}
+{% block pagetitle %}{{ user.hackerprofile.display_name|default:user.username|default:'Anonymous' }}{% endblock %}
 
-{% block pageheader %}{{ user.hackerprofile.display_name|default:user.username }}{% endblock %}
+{% block pageheader %}{{ user.hackerprofile.display_name|default:user.username|default:'Anonymous' }}{% endblock %}
 
 {% block keywords %}{% endblock %}
 
 {% block description %}{% endblock %}
 
 {% block content %}
+
+{% include 'main/elements/please_login.html' %}
 
 <form action="" method="post" class="">{% csrf_token %}
     <div class="non-field-errors">{{ form.non_field_errors }}</div>
