--- a/templates/main/pages/question_edit.html
+++ b/templates/main/pages/question_edit.html
@@ -11,11 +11,13 @@
 {% block content %}
 
 <ul>
-    <li>After you post a question, it will be listed on the <a href="{% url bashoneliners.main.views.question_list %}">Questions</a> page, and other users can suggest (possibly many) one-liners that answer it.</li>
-    <li>You will receive an email when someone suggests an answer. <em>(coming soon)</em></li>
-    <li>You can track your questions on your <a href="{% url bashoneliners.main.views.profile %}">profile</a> page, and mark them <strong>Answered</strong> so they no longer appear in the list of questions.</li>
+    <li>Please use the search box at the top to try to find a one-liner that may already exist to answer your question.</li>
+    <li>After you post a question, it will be listed on the <a href="{% url bashoneliners.main.views.question_list %}">open questions</a> page, and other users can suggest (possibly many) one-liners that answer it.</li>
+    <li>You will receive an email when someone posts a one-liner as an answer to your question. <em>(coming soon)</em></li>
+    <li>You can track your questions on your <a href="{% url bashoneliners.main.views.profile %}">profile</a> page, and mark them <strong>Answered</strong> to remove them from the list of open questions.</li>
 </ul>
 
+{% include 'main/elements/please_login.html' %}
 {% include 'main/elements/question_edit_form.html' %}
 
 {% endblock content %}
