--- a/templates/main/pages/question_list.html
+++ b/templates/main/pages/question_list.html
@@ -12,14 +12,10 @@
 
 <div style="margin-bottom: 2em">
 
-<p>Are you looking for a one-liner for some specific purpose and it's not on the site yet? (Surely you searched well, right?)
-Feel free to ask for it here.</p>
+<p>If you have a question that can be answered by an appropriate bash one-liner,
+feel free to ask it here!</p>
 
-{% if user.is_authenticated %}
 <p><a href="{% url bashoneliners.main.views.question_new %}" class="btn btn-primary">Post a question</a></p>
-{% else %}
-<p>To post a question, please <a href="{% url bashoneliners.main.views.login %}">login</a> first.</p>
-{% endif %}
 
 </div>
 
