--- a/templates/main/elements/oneliner_edit_form.html
+++ b/templates/main/elements/oneliner_edit_form.html
@@ -46,9 +46,10 @@
 	    <div class="is_published"><label class="checkbox">{{ form.is_published }} <span>Published</span></label></div>
 	</div>
 
-	<p class="form-actions">
+	<div class="form-actions">
+	    {% include 'main/elements/please_login.html' %}
 	    {% for action in form.actions %}<input class="btn btn-primary" type="submit" name="action" value="{{ action }}"/>{% endfor %}
 	    <a class="btn" href="{{ form.next_url.value }}">Cancel</a>
-	</p>
+	</div>
     </div>
 </form>
