--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 		    <li><a href="/admin/">Admin</a></li>
 		    {% endif %}
 		    <li><a href="{% url bashoneliners.main.views.sourcecode %}">Source code</a></li>
-		    <li><a href="{% url bashoneliners.main.views.index %}">Latest</a></li>
+		    <li><a href="{% url bashoneliners.main.views.oneliner_list %}">Latest</a></li>
 		    <li><a href="{% url bashoneliners.main.views.oneliner_new %}">Post</a>
 		    <li><a href="{% url bashoneliners.main.views.question_list %}">Questions</a></li>
 		    <li><a href="{% url bashoneliners.urls.feed %}">RSS</a></li>
