--- a/templates/main/elements/oneliner.html
+++ b/templates/main/elements/oneliner.html
@@ -1,4 +1,5 @@
 {% load markup %}
+{% load comments %}
 
     <div class="oneliner well oneliner-{{oneliner.pk}}">
 	<h3 class="summary">
@@ -29,12 +30,23 @@
 	</div>
 	{% endif %}
 
-	{% if user != oneliner.user and not nobuttons %}
+	{% if not nobuttons %}
 	<p><a href="{% url bashoneliners.main.views.oneliner_alternative oneliner.pk %}" class="btn">Post an alternative one-liner</a></p>
 	{% endif %}
 
 	{% block related %}
 	{% endblock %}
+
+	{% get_comment_count for oneliner as comment_count %}
+	<div class="related">
+	    <h3 class="">Comments ({{ comment_count }})</h3>
+	    <div class="comments">
+	    {% render_comment_list for oneliner %}
+	    {% if not nobuttons %}
+	    <p><a href="{% url bashoneliners.main.views.oneliner_comment oneliner.pk %}" class="btn">Post a comment on this one-liner</a></p>
+	    {% endif %}
+	    </div>
+	</div>
 
 	{% if user == question.user and not question.is_answered %}
 	<p><a href="{% url bashoneliners.main.ajax.question_answered question.pk oneliner.pk %}" class="btn btn-primary question-answered" data-parent="question-{{ question.pk }}">Accept this answer</a></p>
