--- a/media/css/bashoneliners.css
+++ b/media/css/bashoneliners.css
@@ -170,6 +170,13 @@ table.profile {
     color: #468847;
 }
 
+.related .well.comment {
+    background: #eee;
+}
+.related .well.comment blockquote {
+    margin: 0;
+}
+
 .footer {
     background-color: #eee;
 }
