--- a/templates/comments/list.html
+++ b/templates/comments/list.html
@@ -1,5 +1,5 @@
 {% for comment in comment_list %}
-<div class="well comment">
+<div class="comment">
 <blockquote>
     <p>{{ comment.comment }}</p>
     <small>
