--- a/templates/main/elements/oneliner.html
+++ b/templates/main/elements/oneliner.html
@@ -40,7 +40,7 @@
 	{% get_comment_count for oneliner as comment_count %}
 	<div class="related">
 	    <h3 class="">Comments ({{ comment_count }})</h3>
-	    <div class="comments">
+	    <div class="well comments">
 	    {% render_comment_list for oneliner %}
 	    {% if not nobuttons %}
 	    <p><a href="{% url bashoneliners.main.views.oneliner_comment oneliner.pk %}" class="btn">Post a comment on this one-liner</a></p>
