use btn-danger class for buttons that do dangerous things (delete things)

--- a/templates/main/elements/question_edit_form.html
+++ b/templates/main/elements/question_edit_form.html
@@ -32,7 +32,7 @@
 
 	<div class="form-actions">
 	    {% include 'main/elements/please_login.html' %}
-	    {% for action in form.actions %}<input type="submit" name="action" value="{{ action }}" class="btn btn-primary"/>{% endfor %}
+	    {% for action in form.actions %}<input type="submit" name="action" value="{{ action.name }}" class="btn {{ action.cssclass }}"/>{% endfor %}
 	    <a class="btn" href="{{ form.next_url.value }}">Cancel</a>
 	</div>
     </div>
