--- a/templates/main/elements/oneliner_edit_form.html
+++ b/templates/main/elements/oneliner_edit_form.html
@@ -48,7 +48,7 @@
 
 	<div class="form-actions">
 	    {% include 'main/elements/please_login.html' %}
-	    {% for action in form.actions %}<input class="btn btn-primary" type="submit" name="action" value="{{ action }}"/>{% endfor %}
+	    {% for action in form.actions %}<input class="btn {{ action.cssclass }}" type="submit" name="action" value="{{ action.name }}"/>{% endfor %}
 	    <a class="btn" href="{{ form.next_url.value }}">Cancel</a>
 	</div>
     </div>
