--- a/media/css/bashoneliners.css
+++ b/media/css/bashoneliners.css
@@ -174,6 +174,22 @@ table.profile {
     background: #eee;
 }
 
+.comments-toggle {
+    cursor: pointer;
+}
+.comments-toggle img {
+    background: url(/media/images/arrows.png) no-repeat center;
+    background-position: 0px -51px;
+    padding: 0px 12px;
+    height: 17px;
+}
+.comments-toggle.expanded img {
+    background-position: 0px -34px;
+}
+.comments {
+    display: none;
+}
+
 .footer {
     background-color: #eee;
 }
