bugfix for cancel button, the cause was simply form fields dont have .value method in Django 1.2.1, it is introduced later

--- a/templates/main/elements/oneliner_edit_form.html
+++ b/templates/main/elements/oneliner_edit_form.html
@@ -49,7 +49,7 @@
 	<div class="form-actions">
 	    {% include 'main/elements/please_login.html' %}
 	    {% for action in form.actions %}<input class="btn {{ action.cssclass }}" type="submit" name="action" value="{{ action.name }}"/>{% endfor %}
-	    <a class="btn" href="{{ form.next_url.value }}">Cancel</a>
+	    <a class="btn" href="{{ next_url }}">Cancel</a>
 	</div>
     </div>
 </form>
