--- a/templates/main/pages/profile_edit.html
+++ b/templates/main/pages/profile_edit.html
@@ -45,7 +45,7 @@
 	<div class="form-actions">
 	    {% include 'main/elements/please_login.html' %}
 	    <input type="submit" name="action" value="Save" class="btn btn-primary"/>
-	    <a class="btn" href="{{ form.next_url.value }}">Cancel</a>
+	    <a class="btn" href="{{ next_url }}">Cancel</a>
 	</div>
     </div>
 </form>
