--- a/templates/main/pages/oneliner_comment.html
+++ b/templates/main/pages/oneliner_comment.html
@@ -34,7 +34,7 @@
     <div class="form-actions">
 	{% include 'main/elements/please_login.html' %}
 	<input class="btn btn-primary" type="submit" name="submit" value="Post"/>
-	<a class="btn" href="{{ form.next_url.value }}">Cancel</a>
+	<a class="btn" href="{{ next_url }}">Cancel</a>
     </div>
 </form>
 
