--- a/templates/comments/list.html
+++ b/templates/comments/list.html
@@ -3,7 +3,7 @@
 <blockquote>
     <p>{{ comment.comment }}</p>
     <small>
-	by <a href="{% url bashoneliners.main.views.profile comment.user.pk %}"><span>{{ comment.user.hackerprofile.display_name|default:comment.user.username }}</span> </a>
+	by <a href="{% url bashoneliners.main.views.profile comment.user.pk %}"><span>{{ comment.user.hackerprofile.get_display_name }}</span> </a>
 	on <span>{{ comment.submit_date }}</span>
     </small>
 </blockquote>
