--- a/templates/main/pages/profile.html
+++ b/templates/main/pages/profile.html
@@ -2,9 +2,9 @@
 
 {% load i18n %}
 
-{% block pagetitle %}{{ hacker.username|default:'Anonymous' }}{% endblock %}
+{% block pagetitle %}{{ hacker.hackerprofile.get_display_name|default:'Anonymous' }}{% endblock %}
 
-{% block pageheader %}{{ hacker.hackerprofile.display_name|default:hacker.username|default:'Anonymous' }}{% if user == hacker %}<a href="{% url bashoneliners.main.views.profile_edit %}" class="edit"></a>{% endif %}{% endblock %}
+{% block pageheader %}{{ hacker.hackerprofile.get_display_name|default:'Anonymous' }}{% if user == hacker %}<a href="{% url bashoneliners.main.views.profile_edit %}" class="edit"></a>{% endif %}{% endblock %}
 
 {% block content %}
 
