html5 compliance bugfixes on login page

--- a/templates/main/pages/login.html
+++ b/templates/main/pages/login.html
@@ -30,28 +30,23 @@
 	    
 	    <label class="radio">
 		<input type="radio" name="openid_identifier" id="id_openid_wordpress" value="__username__.wordpress.com"/>
-		WordPress: <div class="input-append"><input class="username" type="text" placeholder="username"/><span class="add-on">.wordpress.com</span></div>
-	    </label>
+		WordPress:</label> <div class="input-append"><label for="id_openid_wordpress"><input class="username" type="text" placeholder="username"/><span class="add-on">.wordpress.com</span></label></div>
 	    
 	    <label class="radio">
 		<input type="radio" name="openid_identifier" id="id_openid_myopenid" value="__username__.myopenid.com"/>
-		MyOpenID: <div class="input-append"><input class="username" type="text" placeholder="username"/><span class="add-on">.myopenid.com</span></div>
-	    </label>
+		MyOpenID:</label> <div class="input-append"><label for="id_openid_myopenid"><input class="username" type="text" placeholder="username"/><span class="add-on">.myopenid.com</span></label></div>
 	    
 	    <label class="radio">
 		<input type="radio" name="openid_identifier" id="id_openid_livejournal" value="__username__.livejournal.com"/>
-		LiveJournal: <div class="input-append"><input class="username" type="text" placeholder="username"/><span class="add-on">.livejournal.com</span></div>
-	    </label>
+		LiveJournal:</label> <div class="input-append"><label for="id_openid_livejournal"><input class="username" type="text" placeholder="username"/><span class="add-on">.livejournal.com</span></label></div>
 	    
 	    <label class="radio">
 		<input type="radio" name="openid_identifier" id="id_openid_myspace" value="myspace.com/__username__"/>
-		MySpace: <div class="input-prepend"><span class="add-on">myspace.com/</span><input class="username" type="text" placeholder="username"/></div>
-	    </label>
+		MySpace:</label> <div class="input-prepend"><label for="id_openid_myspace"><span class="add-on">myspace.com/</span><input class="username" type="text" placeholder="username"/></label></div>
 	    
 	    <label class="radio">
 		<input type="radio" name="openid_identifier" id="id_openid_launchpad" value="launchpad.net/~__username__"/>
-		Launchpad: <div class="input-prepend"><span class="add-on">launchpad.net/~</span><input class="username" type="text" placeholder="username"/></div>
-	    </label>
+		Launchpad:</label> <div class="input-prepend"><label for="id_openid_launchpad"><span class="add-on">launchpad.net/~</span><input class="username" type="text" placeholder="username"/></label></div>
 	</div>
     </div>
     <div class="form-actions">
