--- a/templates/main/elements/oneliners.html
+++ b/templates/main/elements/oneliners.html
@@ -1,7 +1,11 @@
 <div class="oneliners">
-    {% for oneliner in oneliners %}
+    {% for oneliner in oneliners.object_list %}
     {% include 'main/elements/oneliner_with_related.html' %}
     {% empty %}
     <p class="message">No matching one-liners.</p>
     {% endfor %}
 </div>
+
+{% with oneliners as items %}
+{% include 'main/elements/pagination.html' %}
+{% endwith %}
