--- a/templates/main/pages/search.html
+++ b/templates/main/pages/search.html
@@ -6,6 +6,21 @@
 
 {% block content %}
 
+<form action="" method="get" class="well form-inline" id="search-form">
+    <div>
+	<input type="hidden" name="is_advanced" value="1"/>
+	<input type="text" name="query" id="id_query" value="{{ searchform.query.value }}" class="span4" />
+	<input type="submit" value="Search" class="btn btn-primary"/>
+    </div>
+    <div class="controls">
+	<label class="checkbox inline">{{ searchform.match_whole_words }}{{ searchform.match_whole_words.label }}</label>
+	<label class="checkbox inline">{{ searchform.match_summary }}{{ searchform.match_summary.label }}</label>
+	<label class="checkbox inline">{{ searchform.match_line }}{{ searchform.match_line.label }}</label>
+	<label class="checkbox inline">{{ searchform.match_explanation }}{{ searchform.match_explanation.label }}</label>
+	<label class="checkbox inline">{{ searchform.match_limitations }}{{ searchform.match_limitations.label }}</label>
+    </div>
+</form>
+
 {% include 'main/elements/oneliners.html' %}
 
 {% endblock %}
@@ -26,7 +41,7 @@
 	    $('#search-loading').empty();
 	}
 
-	$('#search-form').submit(function(e) {
+	$('x#search-form').submit(function(e) {
 	    e.preventDefault();
 	    $('#search-loading').append($('#templates .search-loading').html());
 	    $('#search-errors').empty();
@@ -42,5 +57,5 @@
 	    $.ajax(options);
 	});
 
-	$('#id_query').focus();
+	$('#search-form #id_query').focus();
 {% endblock %}
