use bootstrap alert class for messages like "no matches"

--- a/templates/main/elements/oneliners.html
+++ b/templates/main/elements/oneliners.html
@@ -2,6 +2,6 @@
     {% for oneliner in oneliners %}
     {% include 'main/elements/oneliner_with_related.html' %}
     {% empty %}
-    <p class="message">No matching one-liners.</p>
+    <div class="alert">No matching one-liners.</div>
     {% endfor %}
 </div>
