--- a/templates/main/elements/oneliners_page.html
+++ b/templates/main/elements/oneliners_page.html
@@ -2,7 +2,7 @@
     {% for oneliner in oneliners_page.object_list %}
     {% include 'main/elements/oneliner_with_related.html' %}
     {% empty %}
-    <p class="message">No matching one-liners.</p>
+    <div class="alert">No matching one-liners.</div>
     {% endfor %}
 </div>
 
