added rss feed for questions, refactored to new pattern of adding feeds

--- a/media/css/bashoneliners.css
+++ b/media/css/bashoneliners.css
@@ -211,8 +211,15 @@ dl.mission dt {
     font-variant: small-caps;
     text-transform: uppercase;
 }
-
 dl.mission dd {
+    margin-bottom: .5em;
+    margin-left: 2em;
+}
+
+dl.rss a:hover {
+    text-decoration: none;
+}
+dl.rss dd {
     margin-bottom: .5em;
     margin-left: 2em;
 }
