--- a/templates/main/pages/index.html
+++ b/templates/main/pages/index.html
@@ -21,7 +21,7 @@ please check out our <a href="{% url bashoneliners.main.views.mission %}">missio
 and <a href="{% url bashoneliners.main.views.sourcecode %}">source code</a> pages!
 </p>
 
-<p>You can follow the latest one-liners on <a href="{% url bashoneliners.urls.feed %}">RSS</a> or twitter: <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a>.</p>
+<p>You can follow the latest one-liners via our <a href="{% url bashoneliners.main.views.feeds %}">feeds</a> or on twitter: <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a>.</p>
 
 <h2>Latest</h2>
 
