--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
 		    <li><a href="{% url bashoneliners.main.views.oneliner_list %}">Latest</a></li>
 		    <li><a href="{% url bashoneliners.main.views.oneliner_new %}">Post</a>
 		    <li><a href="{% url bashoneliners.main.views.question_list %}">Questions</a></li>
-		    <li><a href="{% url bashoneliners.urls.feed %}">RSS</a></li>
+		    <li><a href="{% url bashoneliners.main.views.feeds %}">Feeds</a></li>
 		</ul>
 
 		{% if searchform %}
