pin the footer to the bottom when the page is too short

--- a/media/css/bashoneliners.css
+++ b/media/css/bashoneliners.css
@@ -228,6 +228,12 @@ dl.rss dd {
     margin-top: 1em;
 }
 
+.fixed-bottom {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
 /* overriding bootstrap */
 
 pre code {
