added page and feed with recent comments

--- a/templates/main/pages/feeds.html
+++ b/templates/main/pages/feeds.html
@@ -13,6 +13,11 @@
 
     <dt><a href="{% url bashoneliners.main.feeds.question %}"><span class="label label-info">RSS</span> Questions</a></dt>
     <dd>Recently posted questions.</dd>
+
+    <!--
+    <dt><a href="{% url bashoneliners.main.feeds.comment %}"><span class="label label-info">RSS</span> Comments</a></dt>
+    <dd>Recently posted comments.</dd>
+    -->
 </dl>
 
 {% endblock %}
