adjusted navbar link order

--- a/templates/main/pages/index.html
+++ b/templates/main/pages/index.html
@@ -23,7 +23,7 @@ and <a href="{% url bashoneliners.main.views.sourcecode %}">source code</a> page
 
 <p>You can follow the latest one-liners via our <a href="{% url bashoneliners.main.views.feeds %}">feeds</a> or on twitter: <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a>.</p>
 
-<h2>Latest</h2>
+<h2>Latest one-liners</h2>
 
 {% include 'main/elements/oneliners_page.html' %}
 
