do not show buttons when not logged in, its not pretty

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,9 @@
 		    {% if user.is_superuser %}
 		    <li><a href="/admin/">Admin</a></li>
 		    {% endif %}
+		    {% if user.is_authenticated %}
 		    <li><a href="{% url bashoneliners.main.views.oneliner_new %}">Post</a>
+		    {% endif %}
 		    <li><a href="{% url bashoneliners.main.views.oneliner_list %}">One-Liners</a></li>
 		    <li><a href="{% url bashoneliners.main.views.question_list %}">Questions</a></li>
 		    <li><a href="{% url bashoneliners.main.views.feeds %}">Feeds</a></li>
