fixed subversion co command sample

--- a/templates/main/pages/sourcecode.html
+++ b/templates/main/pages/sourcecode.html
@@ -36,7 +36,7 @@ If you are still interested, contact us at <a href="mailto:bashoneliners@googleg
 bzr branch lp:bashoneliners
 
 # using Subversion (read-only mirror)
-svn checkout http://bashoneliners.googlecode.com/svn/ bashoneliners-read-only
+svn checkout http://bashoneliners.googlecode.com/svn/trunk bashoneliners
 
 # using Git (mirror)
 git clone https://github.com/titan2x/bashoneliners.git
