--- a/templates/main/pages/index.html
+++ b/templates/main/pages/index.html
@@ -11,17 +11,10 @@
 {% block content %}
 
 <p>Welcome to <strong>bashoneliners.com</strong>, a place for practical or just pure awesome bash <em>one-liners</em> or shell script tips and tricks for GNU Linux, UNIX or BSD systems.
-You can post a one-liner and share with the world,
-or browse and search the ones contributed by others.</p>
+You can post a bash one-liner to share it with the world,
+or browse or search the one-liners contributed by others.</p>
 
-<p>This is an open-source project,
-and we are looking for contributors and sponsors.
-If you are interested to join us, 
-please check out our <a href="{% url bashoneliners.main.views.mission %}">mission statement</a> 
-and <a href="{% url bashoneliners.main.views.sourcecode %}">source code</a> pages!
-</p>
-
-<p>You can follow the latest one-liners via our <a href="{% url bashoneliners.main.views.feeds %}">feeds</a> or on twitter: <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a>.</p>
+<p>You can follow the latest bash one-liners via <a href="{% url bashoneliners.main.views.feeds %}">rss feeds</a> or on twitter <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a>.</p>
 
 <h2>Latest one-liners</h2>
 
