--- a/templates/main/pages/sourcecode.html
+++ b/templates/main/pages/sourcecode.html
@@ -10,15 +10,20 @@
 
 {% block content %}
 
-<p>This is an open-source project and we are looking for sponsors. You can find the source code here:</p>
-<p><a href="https://launchpad.net/bashoneliners">https://launchpad.net/bashoneliners</a></p>
-
-<p>If you would like to participate in developing this site, 
+<p>This is an open-source project. 
+If you would like to participate or contribute, 
 please read the <a href="{% url bashoneliners.main.views.mission %}">mission statement</a> first, 
-it is the foundation of our project.
-If you are still interested, contact us at <a href="mailto:bashoneliners@googlegroups.com">bashoneliners@googlegroups.com</a> and let's start the conversation!</p>
+it is the foundation of the project.
+If you are still interested, 
+please contact us via the mailing list at <a href="mailto:bashoneliners@googlegroups.com">bashoneliners@googlegroups.com</a>
+or privately at <a href="mailto:info@bashoneliners.com">info@bashoneliners.com</a> and let's start the conversation!</p>
 
 <dl class="sourcecode">
+    <dt>Project homepage</dt>
+    <dd>
+	<a href="https://launchpad.net/bashoneliners">https://launchpad.net/bashoneliners</a>
+    </dd>
+
     <dt>Task management, upcoming features</dt>
     <dd>
 	<a href="https://trello.com/board/main/4e7da3cf5a94680b35000893">https://trello.com/board/main/4e7da3cf5a94680b35000893</a>
