show comments expanded when posting a comment on a one-liner and when viewing a single one-liner

--- a/media/css/bashoneliners.css
+++ b/media/css/bashoneliners.css
@@ -184,6 +184,9 @@ table.profile {
 .comments {
     display: none;
 }
+.comments.expanded {
+    display: inherit;
+}
 
 .footer {
     background-color: #eee;
