--- a/templates/main/pages/oneliner.html
+++ b/templates/main/pages/oneliner.html
@@ -6,6 +6,8 @@
 
 {% block content %}
 
+{% with 'expanded' as comments_expanded %}
 {% include 'main/elements/oneliners.html' %}
+{% endwith %}
 
 {% endblock %}
