--- a/templates/main/pages/oneliner_comment.html
+++ b/templates/main/pages/oneliner_comment.html
@@ -11,7 +11,9 @@
 {% block content %}
 
 {% with 1 as nobuttons %}
+{% with 'expanded' as comments_expanded %}
 {% include 'main/elements/oneliner.html' %}
+{% endwith %}
 {% endwith %}
 
 {% include 'main/elements/please_login.html' %}
