--- a/templates/main/elements/oneliner.html
+++ b/templates/main/elements/oneliner.html
@@ -45,8 +45,8 @@
 	{% get_comment_count for oneliner as comment_count %}
 	{% if comment_count > 0 %}
 	<div class="related">
-	    <h3 class="comments-toggle"><img/>Comments ({{ comment_count }})</h3>
-	    <div class="well comments">
+	    <h3 class="comments-toggle {{ comments_expanded }}"><img/>Comments ({{ comment_count }})</h3>
+	    <div class="well comments {{ comments_expanded }}">
 	    {% render_comment_list for oneliner %}
 	    {% if user.is_authenticated and not nobuttons %}
 	    <p><a href="{% url bashoneliners.main.views.oneliner_comment oneliner.pk %}" class="btn"><i class="icon-comment"></i> Post a comment on this one-liner</a></p>
